gap fixes

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
 main {
     padding-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 28px;
+}
+
+@media screen and (max-width: 1000px) {
+    main {
+        gap: 4px;
+    }
 }
